[gd_scene load_steps=4 format=3 uid="uid://bird_slot_card"]

[ext_resource type="Script" path="res://views/bird_house/BirdSlotCard.gd" id="1_slot"]
[ext_resource type="FontFile" uid="uid://dnyg6pd3wordy" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.2, 0.25, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.6, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BirdSlotCard" type="PanelContainer"]
custom_minimum_size = Vector2(130, 160)
theme_override_styles/panel = SubResource("StyleBoxFlat_normal")
script = ExtResource("1_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="IconContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BirdIconWrapper" type="Control" parent="MarginContainer/VBoxContainer/IconContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="BirdIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/IconContainer/BirdIconWrapper"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="BirdNameOverlay" type="Label" parent="MarginContainer/VBoxContainer/IconContainer/BirdIconWrapper"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "鸟名"
theme_override_colors/font_color = Color(0.3529412, 0.1882353, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillBallsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="NicknameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 18)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.1, 0, 1)
theme_override_constants/outline_size = 1
horizontal_alignment = 1
clip_text = true

[node name="SelectionIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.8, 0, 0.3)
